--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="test.css">   
     </head>
 <body>
-      JASLEEN KAUR
+      Diya Patel
 	
 
  Scarborough, Toronto, ON	      | 4372265689 | 
