--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
         <link rel="stylesheet" href="test.css">   
     </head>
 <body>
-      Diya Patel
-	
-
- Scarborough, Toronto, ON	      | 4372265689 | 
-diya239@gmail.com
-
-
+     
+<div class="contact">
+    <h1>DIYA PATEL</h1>
+    <p>Scarborough, Toronto, ON</p>
+    <p>4372265689</p>
+    <p>diya239@gmail.com</p>
+</div>
 A student of computer Engineering techincian . Organized and motivated professional, who is eager to apply strong time management skills and technical aptitude. Skilled in object-oriented programming, web development with Agile training.
 
-Skills
-
-•  Front-End Skills: HTML, CSS	•  Quality Assurance & Web Testing
-•  Databases: Oracle, MongoDB	•	Customer Relationship Management
-•  Programming: Java, C#, .Net, Python	•  Strong Interpersonal and Communication Skills
-•	Teamwork and Collaboration	•  Analytical Thinking and Problem Solving
-•	Fluent in English, Hindi and Punjabi 	•	Tools: MS Office, Jira, Git/GitHub
+<div class="skills">
+    <h2>SKILLS</h2>
+    <ul>
+        <li><span class="front-end">Front-End Skills: HTML, CSS</span></li>
+        <li><span class="quality-assurance">Quality Assurance & Web Testing</span></li>
+        <li><span class="databases">Databases: Oracle, MongoDB</span></li>
+        <li><span class="programming">Programming: Java, C#, .Net, Python</span></li>
+        <li><span class="teamwork">Teamwork and Collabor
 
 Hobbies 
   •  Studying 
